Terminado Arreglos del Modulo de Colectivo

--- a/src/views/layouts/footer.ejs
+++ b/src/views/layouts/footer.ejs
@@ -66,6 +66,8 @@
     <script src="/js/phone-validations/legal-insured-optional.js"></script>
     <script src="/js/phone-validations/legal-insured-mobile.js"></script>
     <script src="/js/phone-validations/user.js"></script>
+    <script src="/js/phone-validations/beneficiary-phone.js"></script>
+    <script src="/js/phone-validations/risk-diverse-phone.js"></script>
 
     <% if(typeof alert != 'undefined') { %>
         <script>
