--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -445,7 +445,7 @@
                                                     <select class="form-control" name="tipo_vehiculo" required>
                                                         <option value="">Seleccione *</option>
                                                         <option value="Motocicleta">Motocicleta</option>
-                                                        <option value="Automovil">Automovil</option>
+                                                        <option value="Automóvil">Automóvil</option>
                                                         <option value="Camión">Camión</option>
                                                         <option value="Autobus">Autobus</option>
                                                     </select>
