--- a/src/views/beneficiaries.ejs
+++ b/src/views/beneficiaries.ejs
@@ -11,7 +11,7 @@
                 <a>Colectivos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Colectivos</strong>
+                <strong>Consulta de Colectivos Beneficiarios</strong>
             </li>
         </ol>
     </div>
@@ -21,26 +21,25 @@
         <div class="col-lg-12">
             <div class="ibox ">
                 <div class="ibox-title">
-                    <h5>Colectivos</h5>
+                    <h5>Colectivos Beneficiarios</h5>
                 </div>
                 <div class="ibox-content">
                     <div class="table-responsive">
                         <table 
                             class="table table-striped table-bordered table-hover"
-                            id="tablaColectivos" 
+                            id="tablaBeneficiarios" 
                         >
                         <thead>
                         <tr>
-                            <th>Póliza</th>
-                            <th>Tipo Colectivo</th>
-                            <th>Tomador</th>
-                            <th>Aseguradora</th>
-                            <th>Fecha desde</th>
-                            <th>Fecha hasta</th>
-                            <th>Moneda</th>
-                            <th>Prima</th>
-                            <th>Estatus</th>
-                            <th>Detalle</th>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                            <th>Cédula</th>
+                            <th>Parentesco</th>
+                            <th>Dirección</th>
+                            <th>Correo</th>
+                            <th>Banco</th>
+                            <th>Tipo de Cuenta</th>
+                            <th>Número de Cuenta</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -50,16 +49,15 @@
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th>Póliza</th>
-                            <th>Tipo Colectivo</th>
-                            <th>Tomador</th>
-                            <th>Aseguradora</th>
-                            <th>Fecha desde</th>
-                            <th>Fecha hasta</th>
-                            <th>Moneda</th>
-                            <th>Prima</th>
-                            <th>Estatus</th>
-                            <th>Detalle</th>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                            <th>Cédula</th>
+                            <th>Parentesco</th>
+                            <th>Dirección</th>
+                            <th>Correo</th>
+                            <th>Banco</th>
+                            <th>Tipo de Cuenta</th>
+                            <th>Número de Cuenta</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -129,36 +127,28 @@
 <!-- Page-Level Scripts -->
 <script>
 var lista = <%- JSON.stringify(data) %>;
-var tablaColectivo = null;
+var tablaBeneficiario = null;
 $(document).ready(function(){
-    tablaColectivo = $('#tablaColectivos').DataTable({
+    tablaBeneficiario = $('#tablaBeneficiarios').DataTable({
         pageLength: 25,
         responsive: true,
         dom: '<"html5buttons"B>lTfgitp',
         processing: true,
         serverSide: false,
         columns: [
-            {"data": "numero_colectivo"},
-            {"data": "tipo_colectivo"},
-            {"data": "nombre_tomador_colectivo"},
-            {"data": "nombre_aseguradora"},
-            {"data": "fecha_desde_colectivo"},
-            {"data": "fecha_hasta_colectivo"},
-            {"data": "tipo_moneda_colectivo"},
-            {"data": "prima_anual_colectivo"},
-            {"data": "estatus_colectivo"},
+            {"data": "nombre_beneficiario"},
+            {"data": "apellido_beneficiario"},
+            {"data": "cedula_beneficiario"},
+            {"data": "parentesco_beneficiario"},
+            {"data": "direccion_beneficiario"},
+            {"data": "correo_beneficiario"},
+            {"data": "banco_beneficiario"},
+            {"data": "tipo_cuenta_beneficiario"},
+            {"data": "nro_cuenta_beneficiario"},
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="get" action="/sistema/collectives-detail/${row.id_colectivo}">
-                                    <button class="btn btn-primary" type="submit"><i class="fa fa-search"></i></button>
-                                </form>`;
-                }
-            },
-            {
-                "data": "",
-                "render": (data, type, row) => {
-                        return `<form class="form-inline" method="get" action="/sistema/edit-collective/${row.id_colectivo}">
+                        return `<form class="form-inline" method="get" action="/sistema/edit-beneficiary/${row.id_beneficiario}">
                                     <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
                                 </form>`;
                 }
@@ -166,7 +156,7 @@ $(document).ready(function(){
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="post" action="/sistema/remove-collective/${row.id_colectivo}">
+                        return `<form class="form-inline" method="post" action="/sistema/remove-beneficiary/${row.id_beneficiario}">
                                     <div class="row">
                                         <div class="col-sm-6 col-lg-12" style="padding-bottom: 10px;">
                                             <button 
@@ -178,8 +168,8 @@ $(document).ready(function(){
                                         </div> 
                                         <div class="col-sm-6 col-lg-12">
                                             <textarea 
-                                                name="obser_deshabilitar_colectivo"
-                                                id="obser_deshabilitar_colectivo" 
+                                                name="obser_deshabilitar_beneficiario"
+                                                id="obser_deshabilitar_beneficiario" 
                                                 placeholder="Observaciones de Deshabilitar *" 
                                                 class="form-control"
                                             ></textarea>
@@ -224,8 +214,8 @@ $(document).ready(function(){
             }
         }
     });
-    tablaColectivo.rows.add(lista);
-    tablaColectivo.draw();
+    tablaBeneficiario.rows.add(lista);
+    tablaBeneficiario.draw();
 });
 </script>
 
