--- a/src/views/healthCollectiveForm.ejs
+++ b/src/views/healthCollectiveForm.ejs
@@ -29,7 +29,7 @@
                     <div id="form" class="wizard-big wizard-health">
                         <h1><i class="fa fa-window-maximize"></i> Colectivo</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-collective" method="POST">
+                            <form id="policy-form" action="/sistema/add-health-collective" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -91,11 +91,11 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_moneda_colectivo">
-                                                        <option selected value="0">Seleccione *</option>
-                                                            <option value="Bolivar">Bolivar</option>
-                                                            <option value="Dólar">Dólar</option>
-                                                            <option value="Euros">Euros</option>
+                                                    <select class="form-control" name="tipo_moneda_colectivo" required>
+                                                        <option value="">Seleccione *</option>
+                                                        <option value="Bolivar">Bolivar</option>
+                                                        <option value="Dólar">Dólar</option>
+                                                        <option value="Euros">Euros</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -118,8 +118,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">¿Maternidad?</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="maternidad_colectivo" id="maternidad_colectivo" onchange="showInput()">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="maternidad_colectivo" id="maternidad_colectivo" onchange="showInput()" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Sí">Sí</option>
                                                         <option value="No">No</option>
                                                     </select>
@@ -200,8 +200,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Aseguradora</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="nombre_aseguradora">
-                                                        <option selected value="0">Seleccione *</option>
+                                                    <select class="form-control" name="nombre_aseguradora" required>
+                                                        <option value="">Seleccione *</option>
                                                         <% insurers.forEach((insurer) => { %>
                                                             <option value="<%= insurer.nombre_aseguradora %>"><%= insurer.nombre_aseguradora %></option>
                                                         <% }); %>
@@ -212,8 +212,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_canal_colectivo">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="tipo_canal_colectivo" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Redes Sociales">Redes Sociales</option>
                                                         <option value="Página Web">Página Web</option>
                                                         <option value="Área By Atina">Área By Atina</option>
@@ -225,8 +225,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Plazos de Espera</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="plazo_espera_colectivo" id="plazo_espera_colectivo" onchange="showInput2()">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="plazo_espera_colectivo" id="plazo_espera_colectivo" onchange="showInput2()" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Sí">Sí</option>
                                                         <option value="No">No</option>
                                                     </select>
@@ -248,25 +248,18 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-12 col-sm-offset-2">
-                                        <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
                             </form>
                         </fieldset>
                         <h1><i class="fa fa-shield"></i> Beneficiarios</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-beneficiary-collective" method="POST" enctype="multipart/form-data">
+                            <form id="extra-form" action="/sistema/add-health-beneficiary-collective" method="POST" enctype="multipart/form-data">
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-2 col-form-label">Tipo de Movimiento</label>
                                                 <div class="col-sm-10">
-                                                    <select class="form-control" name="tipo_movimiento_beneficiario">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="tipo_movimiento_beneficiario" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Emisión">Emisión</option>
                                                         <option value="Renovación">Renovación</option>
                                                         <option value="Inclusión">Inclusión</option>
@@ -283,18 +276,11 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-12 col-sm-offset-2">
-                                        <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
                             </form>
                         </fieldset>
                         <h1><i class="fa fa-file-text-o"></i> Recibo</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-receipt-collective" method="POST">
+                            <form id="receipt-form" action="/sistema/add-health-receipt-collective" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -341,7 +327,7 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
                                                     <div class="col-sm-9">
                                                         <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculation()">
-                                                            <option selected value="">Seleccione</option>
+                                                            <option value="">Seleccione</option>
                                                             <option value="Mensual">Mensual</option>
                                                             <option value="Trimestral">Trimestral</option>
                                                             <option value="Semestral">Semestral</option>
@@ -388,8 +374,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo de recibo</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_recibo">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="tipo_recibo" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Emisión">Emisión</option>
                                                         <option value="Renovación">Renovación</option>
                                                         <option value="Inclusión">Inclusión</option>
@@ -414,8 +400,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Método de Pago</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="metodo_pago_recibo">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="metodo_pago_recibo" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Transferencia">Transferencia</option>
                                                         <option value="Zelle">Zelle</option>
                                                         <option value="Efectivo">Efectivo</option>
@@ -462,18 +448,11 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-12 col-sm-offset-2">
-                                        <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
                             </form>
                         </fieldset>
                         <h1><i class="fa fa-usd"></i> Comisión</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-commission-collective" method="POST">
+                            <form id="commission-form" action="/sistema/add-health-commission-collective" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -663,18 +642,11 @@
                                         <% } %>
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-12 col-sm-offset-2">
-                                        <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
                             </form>
                         </fieldset>
                         <h1><i class="fa fa-check-square-o"></i> Factor de Verificación</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-verification-collective" method="POST">
+                            <form id="verification-form" action="/sistema/add-health-verification-collective" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <% if (typeof(collective) !== 'undefined') { %>
@@ -713,20 +685,13 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Estatus Comisión</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="estatus_comision_factor_verificacion">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="estatus_comision_factor_verificacion" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Pagado">Pagado</option>
                                                         <option value="Pendiente">Pendiente</option>
                                                     </select>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-12 col-sm-offset-2">
-                                        <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
                                         </div>
                                     </div>
                                 </div>
