--- a/src/views/layouts/footerCollectiveWizardForm.ejs
+++ b/src/views/layouts/footerCollectiveWizardForm.ejs
@@ -28,6 +28,26 @@
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script>
+    $.extend($.validator.messages, {
+        required: "Este campo es obligatorio",
+        remote: "Por favor, rellena este campo",
+        email: "Por favor, escribe una dirección de correo válida",
+        url: "Por favor, escribe una URL válida",
+        date: "Por favor, escribe una fecha válida",
+        dateISO: "Por favor, escribe una fecha (ISO) válida",
+        number: "Por favor, escribe un número entero válido",
+        digits: "Por favor, escribe sólo dígitos",
+        creditcard: "Por favor, escribe un número de tarjeta válido",
+        equalTo: "Por favor, escribe el mismo valor de nuevo",
+        accept: "Por favor, escribe un valor con una extensión aceptada",
+        maxlength: $.validator.format("Por favor, no escribas más de {0} caracteres"),
+        minlength: $.validator.format("Por favor, no escribas menos de {0} caracteres"),
+        rangelength: $.validator.format("Por favor, escribe un valor entre {0} y {1} caracteres"),
+        range: $.validator.format("Por favor, escribe un valor entre {0} y {1}"),
+        max: $.validator.format("Por favor, escribe un valor menor o igual a {0}"),
+        min: $.validator.format("Por favor, escribe un valor mayor o igual a {0}"),
+        step: $.validator.format("Por favor, escribe un múltiplo de {0}")
+    });
     $(document).ready(function(){
         $("#wizard").steps();
         $("#form").steps({
@@ -35,10 +55,57 @@
             bodyTag: "fieldset",
             titleTemplate:"<span class='text'></span> #title#",
             saveState: true,
+            labels: {
+                cancel: "Cancelar",
+                current: "current step:",
+                pagination: "Pagination",
+                finish: "Cerrar",
+                next: "Siguiente",
+                previous: "Anterior",
+                loading: "Cargando ..."
+            },
+            onStepChanging: (event, currentIndex, newIndex) => {
+                if (currentIndex > newIndex)
+                {
+                    return true;
+                }
+                if (newIndex === 5)
+                {
+                    return false;
+                }
+                if (newIndex === 1) {
+                    $("#policy-form").validate().settings.ignore = ":disabled,:hidden";
+                    return $("#policy-form").valid();
+                } else if (newIndex === 2) {
+                    $('#extra-form').validate().settings.ignore = ":disabled,:hidden";
+                    return $('#extra-form').valid();
+                } else if (newIndex === 3) {
+                    $('#receipt-form').validate().settings.ignore = ":disabled,:hidden";
+                    return $('#receipt-form').valid();
+                } else if (newIndex === 4) {
+                    $('#commission-form').validate().settings.ignore = ":disabled,:hidden";
+                    return $('#commission-form').valid();
+                }
+            },
+            onStepChanged: (event, currentIndex, priorIndex) => {
+                if (currentIndex === 1) {
+                    $('#policy-form').submit();
+                } else if (currentIndex === 2) {
+                    $('#extra-form').submit();
+                } else if (currentIndex === 3) {
+                    $('#receipt-form').submit();
+                } else if (currentIndex === 4) {
+                    $('#commission-form').submit();
+                }
+            },
+            onFinishing:(event, currentIndex) => {
+                $('#verification-form').validate().settings.ignore = ":disabled";
+                return $('#verification-form').valid();
+            },
             onFinished: (a) => {
                 $('#form .steps a:eq(0)').click();
                 $('#form').hide();
-                window.location='/sistema';
+                $('#verification-form').submit();
             }
         });
     });
