--- a/src/views/variousRisk.ejs
+++ b/src/views/variousRisk.ejs
@@ -11,7 +11,7 @@
                 <a>Colectivos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Colectivos</strong>
+                <strong>Consulta de Colectivos Riesgos Diversos</strong>
             </li>
         </ol>
     </div>
@@ -21,26 +21,24 @@
         <div class="col-lg-12">
             <div class="ibox ">
                 <div class="ibox-title">
-                    <h5>Colectivos</h5>
+                    <h5>Colectivos Riesgos Diversos</h5>
                 </div>
                 <div class="ibox-content">
                     <div class="table-responsive">
                         <table 
                             class="table table-striped table-bordered table-hover"
-                            id="tablaColectivos" 
+                            id="tablaRiesgosDiversos" 
                         >
                         <thead>
                         <tr>
-                            <th>Póliza</th>
-                            <th>Tipo Colectivo</th>
-                            <th>Tomador</th>
-                            <th>Aseguradora</th>
-                            <th>Fecha desde</th>
-                            <th>Fecha hasta</th>
-                            <th>Moneda</th>
-                            <th>Prima</th>
-                            <th>Estatus</th>
-                            <th>Detalle</th>
+                            <th>Nombre/Razón Social</th>
+                            <th>Cédula</th>
+                            <th>Rif</th>
+                            <th>Dirección</th>
+                            <th>Correo</th>
+                            <th>Suma Asegurada</th>
+                            <th>Modelo</th>
+                            <th>Serial</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -50,16 +48,14 @@
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th>Póliza</th>
-                            <th>Tipo Colectivo</th>
-                            <th>Tomador</th>
-                            <th>Aseguradora</th>
-                            <th>Fecha desde</th>
-                            <th>Fecha hasta</th>
-                            <th>Moneda</th>
-                            <th>Prima</th>
-                            <th>Estatus</th>
-                            <th>Detalle</th>
+                            <th>Nombre/Razón Social</th>
+                            <th>Cédula</th>
+                            <th>Rif</th>
+                            <th>Dirección</th>
+                            <th>Correo</th>
+                            <th>Suma Asegurada</th>
+                            <th>Modelo</th>
+                            <th>Serial</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -129,36 +125,27 @@
 <!-- Page-Level Scripts -->
 <script>
 var lista = <%- JSON.stringify(data) %>;
-var tablaColectivo = null;
+var tablaRiesgoDiverso = null;
 $(document).ready(function(){
-    tablaColectivo = $('#tablaColectivos').DataTable({
+    tablaRiesgoDiverso = $('#tablaRiesgosDiversos').DataTable({
         pageLength: 25,
         responsive: true,
         dom: '<"html5buttons"B>lTfgitp',
         processing: true,
         serverSide: false,
         columns: [
-            {"data": "numero_colectivo"},
-            {"data": "tipo_colectivo"},
-            {"data": "nombre_tomador_colectivo"},
-            {"data": "nombre_aseguradora"},
-            {"data": "fecha_desde_colectivo"},
-            {"data": "fecha_hasta_colectivo"},
-            {"data": "tipo_moneda_colectivo"},
-            {"data": "prima_anual_colectivo"},
-            {"data": "estatus_colectivo"},
+            {"data": "nom_razon_riesgo_diverso"},
+            {"data": "cedula_riesgo_diverso"},
+            {"data": "rif_riesgo_diverso"},
+            {"data": "direccion_riesgo_diverso"},
+            {"data": "correo_riesgo_diverso"},
+            {"data": "suma_asegurada_riesgo_diverso"},
+            {"data": "modelo_riesgo_diverso"},
+            {"data": "serial_riesgo_diverso"},
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="get" action="/sistema/collectives-detail/${row.id_colectivo}">
-                                    <button class="btn btn-primary" type="submit"><i class="fa fa-search"></i></button>
-                                </form>`;
-                }
-            },
-            {
-                "data": "",
-                "render": (data, type, row) => {
-                        return `<form class="form-inline" method="get" action="/sistema/edit-collective/${row.id_colectivo}">
+                        return `<form class="form-inline" method="get" action="/sistema/edit-risk-diverse/${row.id_riesgo_diverso}">
                                     <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
                                 </form>`;
                 }
@@ -166,7 +153,7 @@ $(document).ready(function(){
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="post" action="/sistema/remove-collective/${row.id_colectivo}">
+                        return `<form class="form-inline" method="post" action="/sistema/remove-risk-diverse/${row.id_riesgo_diverso}">
                                     <div class="row">
                                         <div class="col-sm-6 col-lg-12" style="padding-bottom: 10px;">
                                             <button 
@@ -178,8 +165,8 @@ $(document).ready(function(){
                                         </div> 
                                         <div class="col-sm-6 col-lg-12">
                                             <textarea 
-                                                name="obser_deshabilitar_colectivo"
-                                                id="obser_deshabilitar_colectivo" 
+                                                name="obser_deshabilitar_riesgo_diverso"
+                                                id="obser_deshabilitar_riesgo_diverso" 
                                                 placeholder="Observaciones de Deshabilitar *" 
                                                 class="form-control"
                                             ></textarea>
@@ -224,8 +211,8 @@ $(document).ready(function(){
             }
         }
     });
-    tablaColectivo.rows.add(lista);
-    tablaColectivo.draw();
+    tablaRiesgoDiverso.rows.add(lista);
+    tablaRiesgoDiverso.draw();
 });
 </script>
 
